# SKTemplate-CMake

./: CMakeLists.txt  README.md
cmake/: android.toolchain.cmake  androidpack.cmake
src/: entrypoint.cpp  main.cpp
src/android/: AndroidManifest.xml
src/android/resources/values/: strings.xml
